--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
-    "framer-motion": "^11.5.3",
+    "framer-motion": "^11.5.4",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.168.0",
     "tilt": "^0.2.0"
